--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@ function bubble(e) {
 
 for (let i = 0; i < divs.length; i++) {
   divs[i].addEventListener('click', bubble)
+
+  const main = document.getElementById('main')
+
+main.addEventListener('click', function(event) {
+  alert('I was clicked!')
+})
 }</script>
     <main id="main">My ID is "main"!</main>
 
