--- a/index.html
+++ b/index.html
@@ -13,24 +13,12 @@
 
   <body>
     <script>
-    const divs = document.querySelectorAll('div')
+    const main = document.getElementById('main')
+    main.addEventListener('click', function(event) {
+      alert('I was clicked!')
+    })
+    </script>
 
-function bubble(e) {
-  // stop! that! propagation!
-  e.stopPropagation()
-
-  console.log(this.firstChild.nodeValue.trim() + ' bubbled')
-}
-
-for (let i = 0; i < divs.length; i++) {
-  divs[i].addEventListener('click', bubble)
-
-  const main = document.getElementById('main')
-
-main.addEventListener('click', function(event) {
-  alert('I was clicked!')
-})
-}</script>
     <main id="main">My ID is "main"!</main>
 
     <br />
