--- a/index.html
+++ b/index.html
@@ -12,15 +12,19 @@
   </head>
 
   <body>
+    <main id="main">My ID is "main"!</main>
     <script>
+
     const main = document.getElementById('main')
     main.addEventListener('click', function(event) {
       alert('I was clicked!')
     })
+
+    const input = document.querySelector('input')
+    input.addEventListener('keydown', function(e) {
+      console.log(e.which)
+    })
     </script>
-
-    <main id="main">My ID is "main"!</main>
-
     <br />
 
     <div>
