--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
     input.addEventListener('keydown', function(e) {
       console.log(e.which)
     })
+
+    const input = document.querySelector('input')
+    input.addEventListener('keydown', function(e) {
+      if (e.which === 71) {
+        return e.preventDefault()
+      }
+    })
     </script>
     <br />
 
