--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
     main.addEventListener('click', function(event) {
       alert('I was clicked!')
     })
-
+    </script>
+    <script>
     const input = document.querySelector('input')
     input.addEventListener('keydown', function(e) {
       console.log(e.which)
     })
+    </script>
 
+    <script>
     const input = document.querySelector('input')
     input.addEventListener('keydown', function(e) {
       if (e.which === 71) {
