automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
   <body>
     <main id="main">My ID is "main"!</main>
     <script>
-
-    const main = document.getElementById('main')
-    main.addEventListener('click', function(event) {
-      alert('I was clicked!')
+    const input = document.querySelector('input')
+    input.addEventListener('keydown', function(e) {
+      if (e.which === 71) {
+        return e.preventDefault()
+      }
+    })
     })
     </script>
     <script>
