automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
     })
     </script>
     <script>
+    const input = document.querySelector('input')
+
+input.addEventListener('keydown', function(e) {
+  if (e.which === 71) {
+    return e.preventDefault()
+  }
+})
     </script>
     <br />
 
